[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bpe-tokenizer"
version = "0.1.0"
description = "Fast Rust tokenizer for RNN training"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "numpy>=1.20.0",
    "pytest>=7.0.0",
]

[tool.maturin]
python-source = "/home/cloexec/.pyenv/shims/python"
module-name = "bpe_tokenizer"
